[gd_scene load_steps=18 format=3 uid="uid://cvwwyafne3ryg"]

[ext_resource type="PackedScene" uid="uid://bbsqvqymrojj5" path="res://scenes/levels/common/level.tscn" id="1_rbgy0"]
[ext_resource type="Script" path="res://scenes/levels/level_1/level_1.gd" id="2_c08mv"]
[ext_resource type="PackedScene" uid="uid://ccqwn6n7il2n2" path="res://scenes/minor/point/point.tscn" id="8_rdj4y"]
[ext_resource type="Script" path="res://scenes/levels/level_1/platform_1.gd" id="10_8rgbm"]
[ext_resource type="PackedScene" uid="uid://cnbl8aw2p0wrn" path="res://units/common/tower.tscn" id="11_ohp30"]
[ext_resource type="PackedScene" uid="uid://c06g6da1scixg" path="res://units/common/tower_stats.tscn" id="12_7xvv5"]
[ext_resource type="PackedScene" uid="uid://du20li6wou6fs" path="res://scenes/minor/message/message.tscn" id="13_2ho3g"]
[ext_resource type="PackedScene" uid="uid://cenxr6q3w2dek" path="res://units/archers/archer.tscn" id="14_kietl"]
[ext_resource type="Texture2D" uid="uid://cjyvn46nwilg0" path="res://models/units/tower/idle/0.png" id="15_5dy8q"]
[ext_resource type="Texture2D" uid="uid://b5ya13e41k2kt" path="res://ui/buttons/text_default.svg" id="16_ugxp1"]
[ext_resource type="Texture2D" uid="uid://dsh51r6drxmtr" path="res://ui/buttons/text_hover.svg" id="17_r7urm"]
[ext_resource type="Texture2D" uid="uid://csq5bonl77fkh" path="res://ui/buttons/text_disabled.svg" id="18_6jsc3"]
[ext_resource type="Script" path="res://scenes/minor/texture_button/texture_button.gd" id="19_lg656"]
[ext_resource type="FontFile" uid="uid://car2t5itecnhr" path="res://ui/fonts/Bungee-Regular.ttf" id="20_d7u56"]
[ext_resource type="PackedScene" uid="uid://d1hglytmquni" path="res://units/common/platform.tscn" id="21_gpxqe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fil16"]
radius = 54.0

[sub_resource type="Theme" id="Theme_esjrm"]
Label/colors/font_color = Color(0.784314, 0.572549, 0.372549, 1)
Label/colors/font_shadow_color = Color(0.427451, 0.392157, 0.298039, 1)
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 2
Label/constants/shadow_outline_size = 0
Label/fonts/font = ExtResource("20_d7u56")

[node name="Level 1" instance=ExtResource("1_rbgy0")]
script = ExtResource("2_c08mv")
next_level_path = "res://scenes/levels/level_2/level_2.tscn"
techical_name = &"LEVEL_1"

[node name="Enemies" parent="." index="1"]
visible = false

[node name="Road 1" type="Node2D" parent="Enemies" index="0"]

[node name="Points" type="Node" parent="Enemies/Road 1" index="0"]

[node name="Point 1" parent="Enemies/Road 1/Points" index="0" node_paths=PackedStringArray("next_roadpoint") instance=ExtResource("8_rdj4y")]
position = Vector2(816, -24)
rotation = 1.5708
new_direction = "D"
next_roadpoint = NodePath("../Point 2")

[node name="Point 2" parent="Enemies/Road 1/Points" index="1" node_paths=PackedStringArray("next_roadpoint") instance=ExtResource("8_rdj4y")]
position = Vector2(816, 528)
rotation = 1.5708
new_direction = "L"
next_roadpoint = NodePath("../Point 3")

[node name="Point 3" parent="Enemies/Road 1/Points" index="2" instance=ExtResource("8_rdj4y")]
position = Vector2(152, 528)

[node name="Holy Oak" parent="Map" index="0"]
position = Vector2(576, 384)

[node name="Towers" parent="." index="3"]
visible = false

[node name="Platform 1" type="Node2D" parent="Towers" index="0"]
process_mode = 4
position = Vector2(928, 256)
script = ExtResource("10_8rgbm")
tower_scene = ExtResource("11_ohp30")
tower_stats_scene = ExtResource("12_7xvv5")
message_scene = ExtResource("13_2ho3g")
unit_scene = ExtResource("14_kietl")
default_view_direction = "L"

[node name="Sprite2D" type="Sprite2D" parent="Towers/Platform 1" index="0"]
texture_filter = 1
position = Vector2(0, -56)
scale = Vector2(1.723, 1.723)
texture = ExtResource("15_5dy8q")

[node name="TouchScreenButton" type="TouchScreenButton" parent="Towers/Platform 1" index="1"]
shape = SubResource("CircleShape2D_fil16")

[node name="Menu" type="Control" parent="Towers/Platform 1" index="2"]
layout_mode = 3
anchors_preset = 0
offset_left = -128.0
offset_top = -64.0
offset_right = 128.0
offset_bottom = 64.0

[node name="Build Button" type="TextureButton" parent="Towers/Platform 1/Menu" index="0"]
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 216.0
offset_bottom = 101.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("16_ugxp1")
texture_pressed = ExtResource("16_ugxp1")
texture_hover = ExtResource("17_r7urm")
texture_disabled = ExtResource("18_6jsc3")
script = ExtResource("19_lg656")

[node name="Label" type="Label" parent="Towers/Platform 1/Menu/Build Button" index="0"]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 187.0
offset_bottom = 66.0
theme = SubResource("Theme_esjrm")
theme_override_font_sizes/font_size = 32
text = "BUILD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrade Button" type="TextureButton" parent="Towers/Platform 1/Menu" index="1"]
layout_mode = 0
offset_left = 138.0
offset_top = 17.0
offset_right = 334.0
offset_bottom = 101.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("16_ugxp1")
texture_pressed = ExtResource("16_ugxp1")
texture_hover = ExtResource("17_r7urm")
texture_disabled = ExtResource("18_6jsc3")
script = ExtResource("19_lg656")

[node name="Label" type="Label" parent="Towers/Platform 1/Menu/Upgrade Button" index="0"]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 187.0
offset_bottom = 66.0
theme = SubResource("Theme_esjrm")
theme_override_font_sizes/font_size = 32
text = "UPGRADE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Remove Button" type="TextureButton" parent="Towers/Platform 1/Menu" index="2"]
layout_mode = 0
offset_left = 44.0
offset_top = 65.0
offset_right = 240.0
offset_bottom = 149.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("16_ugxp1")
texture_pressed = ExtResource("16_ugxp1")
texture_hover = ExtResource("17_r7urm")
texture_disabled = ExtResource("18_6jsc3")
script = ExtResource("19_lg656")

[node name="Label" type="Label" parent="Towers/Platform 1/Menu/Remove Button" index="0"]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 187.0
offset_bottom = 66.0
theme = SubResource("Theme_esjrm")
theme_override_font_sizes/font_size = 32
text = "REMOVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tower Stats Button" type="TextureButton" parent="Towers/Platform 1/Menu" index="3"]
layout_mode = 0
offset_left = 133.0
offset_top = 65.0
offset_right = 329.0
offset_bottom = 149.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("16_ugxp1")
texture_pressed = ExtResource("16_ugxp1")
texture_hover = ExtResource("17_r7urm")
texture_disabled = ExtResource("18_6jsc3")
script = ExtResource("19_lg656")

[node name="Label" type="Label" parent="Towers/Platform 1/Menu/Tower Stats Button" index="0"]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 187.0
offset_bottom = 66.0
theme = SubResource("Theme_esjrm")
theme_override_font_sizes/font_size = 32
text = "STATS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Platform 2" parent="Towers" index="1" instance=ExtResource("21_gpxqe")]
process_mode = 4
position = Vector2(706, 418)
default_view_direction = "R"

[node name="Platform 3" parent="Towers" index="2" instance=ExtResource("21_gpxqe")]
process_mode = 4
position = Vector2(208, 638)

[node name="Shell Container" parent="." index="4"]
visible = false

[node name="Start Timer" parent="Timers" index="0"]
autostart = false

[connection signal="player_ended_tutorial" from="." to="Towers/Platform 1" method="_on_level_1_player_ended_tutorial"]
[connection signal="pressed" from="Towers/Platform 1/TouchScreenButton" to="Towers/Platform 1" method="_on_local_touch_screen_button_pressed"]
[connection signal="pressed" from="Towers/Platform 1/TouchScreenButton" to="Towers/Platform 1" method="_on_touch_screen_button_pressed"]
[connection signal="mouse_entered" from="Towers/Platform 1/Menu/Build Button" to="Towers/Platform 1/Menu/Build Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Towers/Platform 1/Menu/Build Button" to="Towers/Platform 1/Menu/Build Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Towers/Platform 1/Menu/Build Button" to="Towers/Platform 1" method="_on_local_build_button_pressed"]
[connection signal="pressed" from="Towers/Platform 1/Menu/Build Button" to="Towers/Platform 1" method="_on_build_button_pressed"]
[connection signal="mouse_entered" from="Towers/Platform 1/Menu/Upgrade Button" to="Towers/Platform 1/Menu/Upgrade Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Towers/Platform 1/Menu/Upgrade Button" to="Towers/Platform 1/Menu/Upgrade Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Towers/Platform 1/Menu/Upgrade Button" to="Towers/Platform 1" method="_on_local_upgrade_button_pressed"]
[connection signal="pressed" from="Towers/Platform 1/Menu/Upgrade Button" to="Towers/Platform 1" method="_on_upgrade_button_pressed"]
[connection signal="mouse_entered" from="Towers/Platform 1/Menu/Remove Button" to="Towers/Platform 1" method="_on_local_remove_button_mouse_entered"]
[connection signal="mouse_entered" from="Towers/Platform 1/Menu/Remove Button" to="Towers/Platform 1/Menu/Remove Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Towers/Platform 1/Menu/Remove Button" to="Towers/Platform 1/Menu/Remove Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Towers/Platform 1/Menu/Remove Button" to="Towers/Platform 1" method="_on_remove_button_pressed"]
[connection signal="mouse_entered" from="Towers/Platform 1/Menu/Tower Stats Button" to="Towers/Platform 1" method="_on_local_tower_stats_button_mouse_entered"]
[connection signal="mouse_entered" from="Towers/Platform 1/Menu/Tower Stats Button" to="Towers/Platform 1/Menu/Tower Stats Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Towers/Platform 1/Menu/Tower Stats Button" to="Towers/Platform 1/Menu/Tower Stats Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Towers/Platform 1/Menu/Tower Stats Button" to="Towers/Platform 1" method="_on_local_tower_stats_button_pressed"]
[connection signal="pressed" from="Towers/Platform 1/Menu/Tower Stats Button" to="Towers/Platform 1" method="_on_tower_stats_button_pressed"]
